--- a/assets/css/page/portfolio.scss
+++ b/assets/css/page/portfolio.scss
@@ -2,6 +2,14 @@
     * {
         z-index: 2;
     }
+    &.portfolio3{
+        padding-top: 100px;
+        .portfolio-item {
+            img{
+            height: 550px;
+            }
+        }
+    }
     .portfolio-item {
         right: 0;
         margin: 0 0 20px;
@@ -72,7 +80,7 @@
     }
 }
 
-.ats{
+.index2{
     background-image: url(../../images/portfolio/adult-arms-crossed-bow-tie-1702.jpg);
     background-position: center;
     background-size: cover;
@@ -111,5 +119,29 @@
 }
 
 .about{
-    background-color: red;
+    margin: 75px auto;
+}
+.art2{
+    background-color: #F0F0F0;
+    padding: 75px 0;
+    .about2{
+        img{
+            border: 15px solid #fff;
+        }
+        .article{
+            padding: 50px 0;
+            i{
+                font-size: 32px;
+                font-weight: 800;
+            }
+        }
+    }
+}
+
+.index3{
+    &.img-flex{
+        img{
+            height: 100vh;
+        }
+    }
 }
