--- a/assets/css/page/portfolio.scss
+++ b/assets/css/page/portfolio.scss
@@ -10,6 +10,14 @@
             }
         }
     }
+    &.portfolio3{
+        padding-top: 100px;
+        .portfolio-item {
+            img{
+            width: 100%;
+            }
+        }
+    }
     .portfolio-item {
         right: 0;
         margin: 0 0 20px;
@@ -21,6 +29,9 @@
         right: 0;
         margin: 0 0 20px;
         padding: 0 10px;
+        &.portfolio-item-100{
+            width: 100%;
+        }
         img {
             width: 100%;
             height: auto;
@@ -143,5 +154,29 @@
         img{
             height: 100vh;
         }
+    }
+}
+
+.index4{
+    background-image:url(../../images/pattern.png),  url(../../images/background/portrait-blue-individuality-black-and-white-157935.jpg), ;
+    background-repeat: repeat, no-repeat ;
+    background-position: center;
+    background-size: auto cover ;
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    h1{
+        text-transform: uppercase;
+        bottom: 100px;  
+        font-size: 25vh;
+        color: #fff;
+        position: absolute;
+        transform: rotate(-90deg) translate(100%, 0);
+        transform-origin: bottom right;
+        right: 1%;
+        bottom: 0.5%;
+        font-weight: 900;
+        width: 90vh;
+        opacity: 0.8;
     }
 }
