--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -207,6 +207,10 @@ body {
   padding-top: 100px; }
   #portfolio.portfolio3 .portfolio-item img {
     height: 550px; }
+#portfolio.portfolio3 {
+  padding-top: 100px; }
+  #portfolio.portfolio3 .portfolio-item img {
+    width: 100%; }
 #portfolio .portfolio-item {
   right: 0;
   margin: 0 0 20px;
@@ -218,6 +222,8 @@ body {
   right: 0;
   margin: 0 0 20px;
   padding: 0 10px; }
+  #portfolio .portfolio-item.portfolio-item-100 {
+    width: 100%; }
   #portfolio .portfolio-item img {
     width: 100%;
     height: auto;
@@ -316,6 +322,28 @@ body {
 
 .index3.img-flex img {
   height: 100vh; }
+
+.index4 {
+  background-image: url(../../images/pattern.png), url(../../images/background/portrait-blue-individuality-black-and-white-157935.jpg);
+  background-repeat: repeat, no-repeat;
+  background-position: center;
+  background-size: auto cover;
+  position: relative;
+  width: 100%;
+  height: 100vh; }
+  .index4 h1 {
+    text-transform: uppercase;
+    bottom: 100px;
+    font-size: 25vh;
+    color: #fff;
+    position: absolute;
+    transform: rotate(-90deg) translate(100%, 0);
+    transform-origin: bottom right;
+    right: 1%;
+    bottom: 0.5%;
+    font-weight: 900;
+    width: 90vh;
+    opacity: 0.8; }
 
 .view-all {
   padding: 10px; }
