--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -273,7 +273,7 @@ body {
     cursor: pointer; }
 
 .index2 {
-  background-image: url(../../images/portfolio/adult-arms-crossed-bow-tie-1702.jpg);
+  background-image: url(../../images/portfolio/6_thumb.png);
   background-position: center;
   background-size: cover;
   position: relative;
@@ -294,7 +294,7 @@ body {
     right: 0;
     bottom: 0;
     left: 0;
-    background-image: url(../../images/portfolio/adult-arms-crossed-bow-tie-1702.jpg);
+    background-image: url(../../images/portfolio/6_thumb.png);
     background-position: center;
     background-size: cover; }
   .index2:after {
@@ -313,9 +313,11 @@ body {
   background-color: #F0F0F0;
   padding: 75px 0; }
   .art2 .about2 img {
+    width: 100%;
+    height: auto;
     border: 15px solid #fff; }
   .art2 .about2 .article {
-    padding: 50px 0; }
+    padding: 50px 10px; }
     .art2 .about2 .article i {
       font-size: 32px;
       font-weight: 800; }
@@ -324,7 +326,7 @@ body {
   height: 100vh; }
 
 .index4 {
-  background-image: url(../../images/pattern.png), url(../../images/background/portrait-blue-individuality-black-and-white-157935.jpg);
+  background-image: url(../../images/pattern.png), url(../../images/background/2_bg.png);
   background-repeat: repeat, no-repeat;
   background-position: center;
   background-size: auto cover;
