--- a/assets/css/page/portfolio.scss
+++ b/assets/css/page/portfolio.scss
@@ -18,6 +18,15 @@
             }
         }
     }
+    &.portfolio4{
+        .portfolio-item {
+            img{
+                opacity: 0.8;
+                -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
+                filter: grayscale(100%);
+            }
+        }
+    }
     .portfolio-item {
         right: 0;
         margin: 0 0 20px;
@@ -170,8 +179,8 @@
     h1{
         text-transform: uppercase;
         bottom: 100px;  
-        font-size: 25vh;
-        color: #fff;
+        font-size: 23vh;
+        color:  rgba($color: #000000, $alpha: .3);
         position: absolute;
         transform: rotate(-90deg) translate(100%, 0);
         transform-origin: bottom right;
@@ -182,3 +191,140 @@
         opacity: 0.8;
     }
 }
+
+
+.index5{
+    background-image:url(../../images/background/3_bg.png);
+    background-repeat:no-repeat ;
+    background-position: center;
+    background-size: cover ;
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    h1{
+        text-transform: uppercase;
+        bottom: 100px;  
+        font-size: 23vh;
+        color:  rgba($color: #fff, $alpha: .8);
+        position: absolute;
+        transform: rotate(-90deg) translate(100%, 0);
+        transform-origin: bottom right;
+        right: 1%;
+        bottom: 0.5%;
+        font-weight: 900;
+        width: 90vh;
+        opacity: 0.8;
+    }
+}
+
+.index6{
+    background-image:url(../../images/background/5_bg.png);
+    background-repeat:no-repeat ;
+    background-position: center;
+    background-attachment: fixed;
+    background-size: cover ;
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    h1{
+        text-transform: uppercase;
+        bottom: 100px;  
+        font-size: 23vh;
+        color:  rgba($color: #fff, $alpha: .8);
+        position: absolute;
+        transform: rotate(-90deg) translate(100%, 0);
+        transform-origin: bottom right;
+        right: 1%;
+        bottom: 0.5%;
+        font-weight: 900;
+        width: 90vh;
+        opacity: 0.8;
+    }
+}
+
+
+
+.about2{
+    margin: 75px auto;
+    h2{
+        text-align: right;
+        padding: 10px 0;
+        letter-spacing: 10px;
+    }
+}
+
+
+
+
+#masonry{
+    margin-bottom: 100px;
+    .masonry-me{
+        &.loro #columns {
+            -webkit-column-count: 2; /* Chrome, Safari, Opera */
+            -moz-column-count: 2; /* Firefox */
+            column-count: 2;
+            column-gap: 15px;
+            width: 100%;
+        }
+        &.telu #columns {
+            -webkit-column-count: 3; /* Chrome, Safari, Opera */
+            -moz-column-count: 3; /* Firefox */
+            column-count: 3;
+            column-gap: 15px;
+            width: 100%;
+        }
+        div#columns{
+            figure {
+                margin: 0 0px 15px;
+                transition: opacity .4s ease-in-out;
+                position: relative;
+                img {
+                    width: 100%; height: auto;
+                }
+                .caption {
+                    position: absolute;
+                    width: 100%;
+                    height: 100%;
+                    opacity: 0;
+                    background: rgba(58,54,54,.9);
+                    -webkit-transition: all ease .5s;
+                    -moz-transition: all ease .5s;
+                    transition: all ease .5s;
+                    display: inline-block;
+                    &:hover {
+                        opacity: 1;
+                    }
+                    .caption-content {
+                        position: absolute;
+                        top: 50%;
+                        width: 100%;
+                        height: 20px;
+                        margin-top: -12px;
+                        text-align: center;
+                        font-size: 20px;
+                        color: #fff;
+                        i {
+                            margin-top: -12px;
+                        }
+                        h3 {
+                            margin: 0;
+                            color: #e9eaed;
+                            font-size: 17px;
+                            letter-spacing: 4px;
+                            text-transform: uppercase;
+                        }
+                        h4 {
+                            margin: 10px 0;
+                            color: #e9eaed;
+                            font-size: 12px;
+                            letter-spacing: 2px;
+                            text-transform: uppercase;
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+
+
