--- a/assets/css/page/responsive.scss
+++ b/assets/css/page/responsive.scss
@@ -48,7 +48,13 @@
     }
 }
 @media screen and (max-width: 768px) {
-
+    #masonry .masonry-me #columns {
+        -webkit-column-count: 1; /* Chrome, Safari, Opera */
+        -moz-column-count: 1; /* Firefox */
+        column-count: 1;
+        column-gap: 15px;
+        width: 100%;
+    }
 }
 @media screen and (max-width: 640px) {
 	
