--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,13 @@
 a {
-  text-decoration: none; }
+  text-decoration: none;
+  color: #e84545; }
   a:hover {
-    text-decoration: none; }
+    text-decoration: none;
+    color: #e84545;
+    transition: 0.5s; }
 
 body {
-  background-color: #fff; }
+  background-color: #ffffff; }
 
 .img-flex {
   -webkit-box-flex: auto;
@@ -18,6 +21,129 @@ body {
   height: 250px;
   object-fit: cover; }
 
+.article-me {
+  display: -ms-flexbox;
+  -ms-flex-wrap: wrap;
+  -ms-flex-direction: column;
+  -webkit-flex-flow: row wrap;
+  flex-flow: row wrap;
+  display: -webkit-box;
+  display: flex; }
+
+.article-me.siji, .article-me.loro, .article-me.telu {
+  padding-top: 200px; }
+
+.article-img img {
+  height: 450px; }
+
+.article-text-info {
+  padding: 50px 0;
+  color: #333; }
+
+.article-text-title {
+  color: #6c7279; }
+
+.article-text p {
+  font-family: 'Open Sans', sans-serif;
+  color: #757575;
+  font-weight: 400;
+  line-height: 23px; }
+
+.article-text blockquote {
+  margin-left: 20px; }
+
+.article-text blockquote,
+.article-text ul,
+.article-text ol {
+  padding: 20px; }
+
+.article-text ul li,
+.article-text ol li {
+  padding: 10px 0;
+  border-bottom: 1px solid #ccc; }
+
+.article-text ul li:before {
+  content: "\f105";
+  font-family: FontAwesome;
+  color: #e84545;
+  margin-right: 10px; }
+
+.article-text ol li:before {
+  content: "\f046";
+  font-family: FontAwesome;
+  color: #e84545;
+  margin-right: 10px; }
+
+.article-text ul li:last-child,
+.article-text ol li:last-child {
+  border-bottom: 0px; }
+
+.article-text h1,
+.article-text h2,
+.article-text h3,
+.article-text h4,
+.article-text h5,
+.article-text h6 {
+  margin-left: 10px; }
+
+[class*="w-"] {
+  float: left;
+  padding: 15px; }
+
+.w-1 {
+  width: 8.33%; }
+
+.w-2 {
+  width: 16.66%; }
+
+.w-3 {
+  width: 25%; }
+
+.w-4 {
+  width: 33.33%; }
+
+.w-5 {
+  width: 41.66%; }
+
+.w-6 {
+  width: 50%; }
+
+.w-7 {
+  width: 58.33%; }
+
+.w-8 {
+  width: 66.66%; }
+
+.w-9 {
+  width: 75%; }
+
+.w-10 {
+  width: 83.33%; }
+
+.w-11 {
+  width: 91.66%; }
+
+.w-12 {
+  width: 100%; }
+
+.article-text-footer {
+  padding: 30px 30px 50px 30px; }
+
+.article-text-footer ul li {
+  list-style: none; }
+
+.article-text-footer li {
+  float: left;
+  padding: 10px 15px;
+  margin-right: 10px;
+  margin-bottom: 10px;
+  border: 1px dotted #e84545;
+  transition-duration: 0.3s; }
+
+.article-text-footer li:hover {
+  background: #e84545;
+  color: #fff; }
+
 /* ------------------------------------------------------------------------------
 	 Header
 -------------------------------------------------------------------------------*/
@@ -26,7 +152,7 @@ body {
   width: 100%;
   z-index: 999; }
   #header.fixed {
-    background-color: white; }
+    background-color: #ffffff; }
     #header.fixed .header-content {
       border-bottom: 0;
       padding: 25px 10%; }
@@ -41,18 +167,15 @@ body {
     -webkit-transition: padding 0.3s;
     transition: padding 0.3s; }
     #header .header-content nav {
-      float: right; }
-      #header .header-content nav a {
-        color: black;
-        font-size: 18px;
-        background: #fff; }
-      #header .header-content nav li {
-        padding: 5px;
-        font-size: 16px;
-        color: #272727;
-        display: inline-block;
-        margin-right: 20px;
-        letter-spacing: 3px; }
+      float: right;
+      font-size: 16px; }
+      #header .header-content nav ul {
+        background-color: transparent; }
+        #header .header-content nav ul li {
+          padding: 5px;
+          display: inline-block;
+          margin-right: 20px;
+          letter-spacing: 3px; }
       #header .header-content nav.open {
         opacity: 0.9;
         visibility: visible;
@@ -211,6 +334,11 @@ body {
   padding-top: 100px; }
   #portfolio.portfolio3 .portfolio-item img {
     width: 100%; }
+#portfolio.portfolio4 .portfolio-item img {
+  opacity: 0.8;
+  -webkit-filter: grayscale(100%);
+  /* Safari 6.0 - 9.0 */
+  filter: grayscale(100%); }
 #portfolio .portfolio-item {
   right: 0;
   margin: 0 0 20px;
@@ -336,8 +464,8 @@ body {
   .index4 h1 {
     text-transform: uppercase;
     bottom: 100px;
-    font-size: 25vh;
-    color: #fff;
+    font-size: 23vh;
+    color: rgba(0, 0, 0, 0.3);
     position: absolute;
     transform: rotate(-90deg) translate(100%, 0);
     transform-origin: bottom right;
@@ -346,6 +474,119 @@ body {
     font-weight: 900;
     width: 90vh;
     opacity: 0.8; }
+
+.index5 {
+  background-image: url(../../images/background/3_bg.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  position: relative;
+  width: 100%;
+  height: 100vh; }
+  .index5 h1 {
+    text-transform: uppercase;
+    bottom: 100px;
+    font-size: 23vh;
+    color: rgba(255, 255, 255, 0.8);
+    position: absolute;
+    transform: rotate(-90deg) translate(100%, 0);
+    transform-origin: bottom right;
+    right: 1%;
+    bottom: 0.5%;
+    font-weight: 900;
+    width: 90vh;
+    opacity: 0.8; }
+
+.index6 {
+  background-image: url(../../images/background/5_bg.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-attachment: fixed;
+  background-size: cover;
+  position: relative;
+  width: 100%;
+  height: 100vh; }
+  .index6 h1 {
+    text-transform: uppercase;
+    bottom: 100px;
+    font-size: 23vh;
+    color: rgba(255, 255, 255, 0.8);
+    position: absolute;
+    transform: rotate(-90deg) translate(100%, 0);
+    transform-origin: bottom right;
+    right: 1%;
+    bottom: 0.5%;
+    font-weight: 900;
+    width: 90vh;
+    opacity: 0.8; }
+
+.about2 {
+  margin: 75px auto; }
+  .about2 h2 {
+    text-align: right;
+    padding: 10px 0;
+    letter-spacing: 10px; }
+
+#masonry {
+  margin-bottom: 100px; }
+  #masonry .masonry-me.loro #columns {
+    -webkit-column-count: 2;
+    /* Chrome, Safari, Opera */
+    -moz-column-count: 2;
+    /* Firefox */
+    column-count: 2;
+    column-gap: 15px;
+    width: 100%; }
+  #masonry .masonry-me.telu #columns {
+    -webkit-column-count: 3;
+    /* Chrome, Safari, Opera */
+    -moz-column-count: 3;
+    /* Firefox */
+    column-count: 3;
+    column-gap: 15px;
+    width: 100%; }
+  #masonry .masonry-me div#columns figure {
+    margin: 0 0px 15px;
+    transition: opacity .4s ease-in-out;
+    position: relative; }
+    #masonry .masonry-me div#columns figure img {
+      width: 100%;
+      height: auto; }
+    #masonry .masonry-me div#columns figure .caption {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      opacity: 0;
+      background: rgba(58, 54, 54, 0.9);
+      -webkit-transition: all ease .5s;
+      -moz-transition: all ease .5s;
+      transition: all ease .5s;
+      display: inline-block; }
+      #masonry .masonry-me div#columns figure .caption:hover {
+        opacity: 1; }
+      #masonry .masonry-me div#columns figure .caption .caption-content {
+        position: absolute;
+        top: 50%;
+        width: 100%;
+        height: 20px;
+        margin-top: -12px;
+        text-align: center;
+        font-size: 20px;
+        color: #fff; }
+        #masonry .masonry-me div#columns figure .caption .caption-content i {
+          margin-top: -12px; }
+        #masonry .masonry-me div#columns figure .caption .caption-content h3 {
+          margin: 0;
+          color: #e9eaed;
+          font-size: 17px;
+          letter-spacing: 4px;
+          text-transform: uppercase; }
+        #masonry .masonry-me div#columns figure .caption .caption-content h4 {
+          margin: 10px 0;
+          color: #e9eaed;
+          font-size: 12px;
+          letter-spacing: 2px;
+          text-transform: uppercase; }
 
 .view-all {
   padding: 10px; }
@@ -394,6 +635,35 @@ body {
   margin-top: -10px;
   margin-bottom: 10px; }
 
+/*-- Ajax Style Content --*/
+#ajax-page {
+  position: absolute;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background: #ffffff;
+  color: #333;
+  top: 100%;
+  z-index: 999999;
+  padding: 50px 0;
+  overflow-y: auto;
+  -webkit-transition: top 1s ease;
+  -moz-transition: top 1s ease;
+  -ms-transition: top 1s ease;
+  -o-transition: top 1s ease;
+  transition: top 1s ease;
+  border-top: 2px solid #888; }
+  #ajax-page .close-ajax {
+    font-size: 24px;
+    margin-bottom: 30px;
+    width: 100%; }
+    #ajax-page .close-ajax .ajax-page-close {
+      padding: 20px;
+      color: #fff;
+      background-color: #333333;
+      float: right;
+      cursor: pointer; }
+
 #site-social i {
   padding-top: 7px; }
 #site-social .social {
@@ -430,6 +700,8 @@ body {
   -webkit-transition: all 0.3s;
   -moz-transition: all 0.3s;
   transition: all 0.3s; }
+  #site-social .top-button:hover {
+    color: #e84545; }
 
 .footer {
   padding: 45px;
@@ -442,11 +714,9 @@ body {
     color: #ccc; }
   .footer p.copyright {
     margin-bottom: 0;
-    padding-bottom: 0;
+    padding-bottom: 0px;
     color: #8b8b8b;
     font-size: 14px; }
-    .footer p.copyright a:hover {
-      color: #e84545; }
 
 @media screen and (max-width: 1024px) {
   #header.fixed .header-content {
@@ -487,5 +757,14 @@ body {
           margin-bottom: 20px; }
     #header .header-content .nav-toggle {
       display: block; } }
+@media screen and (max-width: 768px) {
+  #masonry .masonry-me #columns {
+    -webkit-column-count: 1;
+    /* Chrome, Safari, Opera */
+    -moz-column-count: 1;
+    /* Firefox */
+    column-count: 1;
+    column-gap: 15px;
+    width: 100%; } }
 
 /*# sourceMappingURL=style.css.map */
