--- a/assets/css/page/_article.scss
+++ b/assets/css/page/_article.scss
@@ -1,103 +1,143 @@
-/*-- Ajax Style Content --*/
-.article-me{
-    display: -ms-flexbox;
-    -ms-flex-wrap: wrap;
-    -ms-flex-direction: column;
-    -webkit-flex-flow: row wrap;
-    flex-flow: row wrap;
-    display: -webkit-box;
-    display: flex;
-}
-.article-me.siji, .article-me.loro, .article-me.telu{
-    padding-top: 200px;
-}
-.article-img img{
-    height: 450px;
-}
-.article-text-info{
-    padding: 50px 0;
-    color: #333;
-}
-.article-text-title{
-    color: #6c7279;
-}
-.article-text p{
-    font-family: 'Open Sans', sans-serif;
-    color: #757575;
-    font-weight: 400;
-    line-height: 23px;
-}
-.article-text blockquote{
-    margin-left: 20px;
-}
-.article-text blockquote,
-.article-text ul,
-.article-text ol{
-    padding: 20px;
-}
-.article-text ul li,
-.article-text ol li{
-    padding: 10px 0;
-    border-bottom: 1px solid #ccc;
-}
-.article-text ul li:before{
-       content: "\f105";
-    font-family: FontAwesome;
-    color: #e84545;
-    margin-right:10px;
-}
-.article-text ol li:before{
-    content: "\f046";
-    font-family: FontAwesome;
-    color: #e84545;
-    margin-right:10px;
-}
-.article-text ul li:last-child,
-.article-text ol li:last-child{
-    border-bottom: 0px;
-}
-.article-text h1,
-.article-text h2,
-.article-text h3,
-.article-text h4,
-.article-text h5,
-.article-text h6{
-    margin-left: 10px;
+/*-- Article Style Content --*/
+#content{
+    padding-top: 150px;
+    #img-article{
+        width: 100%;
+        img{
+            width: 100%;
+        }
+    }
+    #content-article{
+        [class*="w-"] {
+            float: left;
+            padding: 15px;
+        }
+        .w-1 {width: 8.33%;}
+        .w-2 {width: 16.66%;}
+        .w-3 {width: 25%;}
+        .w-4 {width: 33.33%;}
+        .w-5 {width: 41.66%;}
+        .w-6 {width: 50%;}
+        .w-7 {width: 58.33%;}
+        .w-8 {width: 66.66%;}
+        .w-9 {width: 75%;}
+        .w-10 {width: 83.33%;}
+        .w-11 {width: 91.66%;}
+        .w-12 {width: 100%;}
+        
+        .article-img{
+            img{
+                width: 100%;
+                height: auto;
+            }
+        }
+        .article-text{
+            .article-text-info{
+                padding: 50px 0;
+                color: $gray;
+                .article-text-category{
+                    color: $red;
+                }
+                .article-text-title{
+                    color: $gray;
+                }
+                .article-text-date{
+                    color: $lightgray
+                }
+            }
+            & blockquote, & ul, & ol{
+                padding: 20px;
+            }
+            & ul li, & ol li{
+                padding: 10px 0;
+                border-bottom: 1px solid $lightgray;
+            }
+            ul {
+                li{
+                    &:before{
+                        content: "\f105";
+                        font-family: FontAwesome;
+                        color: $red;
+                        margin-right:10px;
+                    }
+                    &:last-child{
+                        border-bottom: 0px;
+                    }
+                }
+            }
+            ol{
+                li{
+                    &:before{
+                        content: "\f046";
+                        font-family: FontAwesome;
+                        color: $red;
+                        margin-right:10px;
+                    }
+                    &:last-child{
+                        border-bottom: 0px;
+                    }
+                }
+            }
+            blockquote{
+                border-left: 5px solid $red;
+                margin-left: 20px;
+            }
+        }
+        .article-text-footer{
+            padding: 30px 30px 50px 30px;
+            ul{
+                li{
+                    float: left;
+                    padding: 10px 15px;
+                    margin-right: 10px;
+                    margin-bottom: 10px;
+                    border:1px dotted $red;
+                    transition-duration: 0.3s;
+                    &:hover{
+                        background: $red;
+                        color: $white;
+                    }
+                }
+            }
+        }
+    }
+    #content-sidebar{
+        &.sidebar-plus-50{
+            padding: 50px 0;
+        }
+        .content-sidebar-item{
+            padding-bottom: 30px;
+            .sidebar-about-share{
+                i{
+                    padding: 7px;
+                    color: $whitedark;
+                    font-size: 18px;
+                    &:hover{
+                        color: $red;
+                    }
+                }
+            }
+            .sidebar-categories-list{
+                li{
+                    padding: 10px 25px;
+                    border-bottom: 1px solid $whitedark;
+                    &:last-child{
+                        border-bottom: 0px;
+                    }
+                }
+            }
+            &.sidebar-tag{
+                ul{
+                    li{
+                        display: block;
+                        float: left;
+                        padding:15px;
+                        border:1px dotted #e84545;
+                        margin:3px;
+                    }
+                }
+            }
+		}
+    }
 }
 
-
-[class*="w-"] {
-    float: left;
-    padding: 15px;
-}
-.w-1 {width: 8.33%;}
-.w-2 {width: 16.66%;}
-.w-3 {width: 25%;}
-.w-4 {width: 33.33%;}
-.w-5 {width: 41.66%;}
-.w-6 {width: 50%;}
-.w-7 {width: 58.33%;}
-.w-8 {width: 66.66%;}
-.w-9 {width: 75%;}
-.w-10 {width: 83.33%;}
-.w-11 {width: 91.66%;}
-.w-12 {width: 100%;}
-
-.article-text-footer{
-    padding: 30px 30px 50px 30px;
-}
-.article-text-footer ul li{
-    list-style: none;
-}
-.article-text-footer li{
-    float: left;
-    padding: 10px 15px;
-    margin-right: 10px;
-    margin-bottom: 10px;
-    border:1px dotted #e84545;
-    transition-duration: 0.3s;
-}
-.article-text-footer li:hover{
-    background: #e84545;
-    color: #fff;
-}
