--- a/assets/css/page/_portfolio.scss
+++ b/assets/css/page/_portfolio.scss
@@ -10,20 +10,11 @@
             }
         }
     }
-    &.portfolio3{
-        padding-top: 100px;
-        .portfolio-item {
-            img{
-            width: 100%;
-            }
-        }
-    }
     &.portfolio4{
         .portfolio-item {
+            position: relative;
             img{
-                opacity: 0.8;
-                -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
-                filter: grayscale(100%);
+                opacity: 0.5;
             }
         }
     }
@@ -100,6 +91,43 @@
     }
 }
 
+.index2{
+    background-image: url(../../images/portfolio/6_thumb.png);
+    background-position: center;
+    background-size: cover;
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    line-height: 100vh;
+    -webkit-text-fill-color: transparent;
+    -webkit-background-clip: text;
+    font-size: 20vw;
+    font-weight: 900;
+    text-align: center;
+    &:before, &:after {
+        position: absolute;
+        content: '';
+    }
+    &:before {
+        z-index: -2;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        background-image: url(../../images/portfolio/6_thumb.png);
+        background-position: center;
+        background-size: cover; 
+    }
+    &:after {
+        position: absolute;
+        z-index: -1;
+        top: .15em;
+        right: .15em;
+        bottom: .15em;
+        left: .15em;
+        background-color: rgba(255,255,255,0.95);
+    }
+}
 .index2{
     background-image: url(../../images/portfolio/6_thumb.png);
     background-position: center;
