--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,5 +1,6 @@
 $red : #e84545;
 $white : #ffffff;
+$whitedark : #ccc;
 $black : #000000;
 $lightgray: #6c7279;
 $gray : #333333;
@@ -9,12 +10,19 @@ $darkgray    : #2d3033;
 a{
     text-decoration: none;
     color: $red;
-    &:hover{
+    &:hover, &:focus{
         text-decoration: none;
-        color: $red;
+        color: $gray;
         transition: 0.5s;
+        text-decoration: none;
+        -moz-transition: background-color, color, 0.3s;
+        -o-transition: background-color, color, 0.3s;
+        -webkit-transition: background-color, color, 0.3s;
+        transition: background-color, color, 0.3s;
+        cursor: pointer;
     }
 }
+
 body{
     background-color: $white;
 }
@@ -36,28 +44,37 @@ body{
 
 
 
-
+/* ------------------------------------------------------------------------------
+	 Basic 
+-------------------------------------------------------------------------------*/
+@import 'page/basic'; // oke
 
 /* ------------------------------------------------------------------------------
 	 Header
 -------------------------------------------------------------------------------*/
-@import 'page/header';
-@import 'page/basic';
-@import 'page/write';
+@import 'page/header';  // oke
 
-@import 'page/portfolio';
+@import 'page/write';  // oke
 
+@import 'page/portfolio';  // otw
 
-
+/* ------------------------------------------------------------------------------
+	 Content
+-------------------------------------------------------------------------------*/
 @import 'page/navigation';
 
-
 @import 'page/article';
-@import 'page/sidebar';
-@import 'page/ajax';
+/* ------------------------------------------------------------------------------
+	 Footer
+-------------------------------------------------------------------------------*/
+
+// @import 'page/ajax';
 
 @import 'page/footer';
 
+/* ------------------------------------------------------------------------------
+	 Responsive
+-------------------------------------------------------------------------------*/
 @import 'page/responsive';
 
 
